{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 194,
  "lineage": "9aaa24f5-8ada-af4e-5eea-d46a45fe3dff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "mydevelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:274683779886:loadbalancer/mydevelb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "mydevelb-371864014.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "mydevelb",
            "idle_timeout": 400,
            "instances": [
              "i-061a1d4fe915a6caf",
              "i-06fbc1c8e0bd0edd1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "mydevelb",
            "security_groups": [
              "sg-07904681bd6017d5b"
            ],
            "source_security_group": "274683779886/default",
            "source_security_group_id": "sg-07904681bd6017d5b",
            "subnets": [
              "subnet-000be7ea715bf8e8c",
              "subnet-06855e9c87d125d17"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.mydevec2",
            "aws_instance.mydevec2-1",
            "aws_subnet.mydevsubnet1",
            "aws_subnet.mydevsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mydevec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:274683779886:instance/i-061a1d4fe915a6caf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061a1d4fe915a6caf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "devenv",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0f916b4f0a12448",
            "private_dns": "ip-10-12-1-203.ec2.internal",
            "private_ip": "10.12.1.203",
            "public_dns": "ec2-54-226-54-196.compute-1.amazonaws.com",
            "public_ip": "54.226.54.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc866f247667e70e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06855e9c87d125d17",
            "tags": {
              "Name": "mydevec2"
            },
            "tags_all": {
              "Name": "mydevec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddd6f71e9f38a7bf"
            ]
          },
          "dependencies": [
            "aws_security_group.mydevSG",
            "aws_subnet.mydevsubnet1",
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mydevec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:274683779886:instance/i-06fbc1c8e0bd0edd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fbc1c8e0bd0edd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "devenv",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b12e888ac166bbbb",
            "private_dns": "ip-10-12-2-69.ec2.internal",
            "private_ip": "10.12.2.69",
            "public_dns": "ec2-3-219-47-182.compute-1.amazonaws.com",
            "public_ip": "3.219.47.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2e3949f8e402aeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000be7ea715bf8e8c",
            "tags": {
              "Name": "mydevec2-1"
            },
            "tags_all": {
              "Name": "mydevec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddd6f71e9f38a7bf"
            ]
          },
          "dependencies": [
            "aws_security_group.mydevSG",
            "aws_subnet.mydevsubnet2",
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mydevig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:internet-gateway/igw-022c55211ff37061a",
            "id": "igw-022c55211ff37061a",
            "owner_id": "274683779886",
            "tags": {
              "Name": "mydevig"
            },
            "tags_all": {
              "Name": "mydevig"
            },
            "vpc_id": "vpc-0fc4cc2cc7489dbe3"
          },
          "dependencies": [
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mydevroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-022c55211ff37061a",
            "id": "r-rtb-03e7729b43e8df9501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e7729b43e8df950",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mydevig",
            "aws_route_table.mydevroutetable",
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mydevroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:route-table/rtb-03e7729b43e8df950",
            "id": "rtb-03e7729b43e8df950",
            "owner_id": "274683779886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022c55211ff37061a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mydevroutetable"
            },
            "tags_all": {
              "Name": "mydevroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc4cc2cc7489dbe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mydevrtassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e531f8cda254443",
            "route_table_id": "rtb-03e7729b43e8df950",
            "subnet_id": "subnet-06855e9c87d125d17"
          },
          "dependencies": [
            "aws_route_table.mydevroutetable",
            "aws_subnet.mydevsubnet1",
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mydevrtassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a385363a8fcb79f8",
            "route_table_id": "rtb-03e7729b43e8df950",
            "subnet_id": "subnet-000be7ea715bf8e8c"
          },
          "dependencies": [
            "aws_route_table.mydevroutetable",
            "aws_subnet.mydevsubnet2",
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mydevSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:security-group/sg-0ddd6f71e9f38a7bf",
            "description": "to allow ssh \u0026 http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddd6f71e9f38a7bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "inbound rule",
            "name_prefix": "",
            "owner_id": "274683779886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydevSG"
            },
            "tags_all": {
              "Name": "mydevSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc4cc2cc7489dbe3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mydevsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:subnet/subnet-06855e9c87d125d17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.12.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06855e9c87d125d17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274683779886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydevsubnet1"
            },
            "tags_all": {
              "Name": "mydevsubnet1"
            },
            "vpc_id": "vpc-0fc4cc2cc7489dbe3"
          },
          "dependencies": [
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mydevsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:subnet/subnet-000be7ea715bf8e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.12.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000be7ea715bf8e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "274683779886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydevsubnet2"
            },
            "tags_all": {
              "Name": "mydevsubnet2"
            },
            "vpc_id": "vpc-0fc4cc2cc7489dbe3"
          },
          "dependencies": [
            "aws_vpc.mydevvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mydevvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274683779886:vpc/vpc-0fc4cc2cc7489dbe3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-0500717ca8c6b861e",
            "default_route_table_id": "rtb-0db17041a038246fc",
            "default_security_group_id": "sg-07904681bd6017d5b",
            "dhcp_options_id": "dopt-0f69c29d9fd8b68c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fc4cc2cc7489dbe3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db17041a038246fc",
            "owner_id": "274683779886",
            "tags": {
              "Name": "mydevvpc"
            },
            "tags_all": {
              "Name": "mydevvpc"
            }
          }
        }
      ]
    }
  ]
}